# Eidolon

./: .codedocs  .gitattributes  .gitignore  .gitmodules  BUILDING.md  Doxyfile  EidolonOSX.spec  EidolonWin.spec  INSTALLATION.md  Libs  MANIFEST.in  Makefile  PyInstaller.spec  README.md  TODO.md  _config.yml  config.ini  environment-py37.yml  environment.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  runtests.sh  setup.py
Libs/osx/: appscript.sh
Libs/python/: nibabel-1.4.0dev-py2.7.egg  pydicom-1.0.0-py2.7.egg  pynrrd-0.1-py2.7.egg  pyparsing-2.0.5-py2.7.egg  pyqtgraph-0.9.10-py2.7.egg
_layouts/: default.html
assets/css/: style.scss
eidolon/: Application.py  Camera2DView.py  Concurrency.py  ImageAlgorithms.py  ImageObject.py  MathDef.py  MeshAlgorithms.cp36-win_amd64.pyd  MeshAlgorithms.cp37-win_amd64.pyd  MeshAlgorithms.pyx  SceneComponents.py  SceneManager.py  SceneObject.py  ScenePlugin.py  SceneUtils.cp36-win_amd64.pyd  SceneUtils.cp37-win_amd64.pyd  SceneUtils.pyx  Utils.py  VisualizerUI.py  __init__.py  __main__.py  _version.py  config.py  setup.py  uiloader.py
eidolon/mathdef/: __init__.py  basis_functions.py  compile_support.py  elem_type.py  image_utils.py  imageutils.py  math_types.py  math_utils.py  mathtypes.py  mesh.py  mesh_algorithms.py  mesh_utils.py  meshutils.py  octree.py  utils.py
eidolon/plugins/: CTMotionTrackPlugin.py  CardiacMotionPlugin.py  CheartPlugin.py  DeformPlugin.py  DicomPlugin.py  IRTKPlugin.py  ImageStackPlugin.py  MeasurementPlugin.py  MetaImagePlugin.py  NRRDPlugin.py  NiftiPlugin.py  ParRecPlugin.py  PlotPlugin.py  SegmentPlugin.py  SlicePlugin.py  VTKPlugin.py  __init__.py  nifti_plugin.py  trimesh_plugin.py
eidolon/renderer/: IndexMatrix.pyx  OgreRenderTypes.cpp  OgreRenderTypes.h  RenderTypes.cpp  RenderTypes.h  RenderTypes.pxd  Renderer.cp36-win_amd64.pyd  Renderer.cp37-win_amd64.pyd  Renderer.pyx  __init__.py  camera.py  figure.py  image_figure.py  image_mesh.py  light.py  manager.py  material.py  mesh.py  render_base.py  render_utils.py  renderbase.py  setup.py  shaders.py  utils.py
eidolon/resources/: DefaultUIStyle.css  __init__.py  resources.qrc
eidolon/scene/: __init__.py  camera_controller.py  mesh_scene_object.py  scene_manager.py  scene_object.py  scene_plugin.py
eidolon/ui/: CardiacMotionProp.ui  ChooseImgStack.ui  DeformObjProp.ui  MainWindow.ui  MatProp.ui  MeasureObjProp.ui  Resources_rc4.py  Resources_rc5.py  Seg2DView.ui  SeriesProp.ui  UI_rc4.py  UI_rc5.py  __init__.py  appbase.py  applications.py  camera_controller.py  camera_widget.py  color_button.py  console_widget.py  entry_point.py  loader.py  main_window.py  models.py  modeltest.py  property_panels.py  resources_rc.py  sceneobject_tree.py  threadsafe_calls.py  ui_utils.py  utils.py
eidolon/utils/: __init__.py  config.py  decorators.py  event_dispatcher.py  misc.py  namespace.py  path_utils.py  pathutils.py  platform.py  routines.py  thread_support.py  types.py
res/: BaseImage.cg  BaseImage2D.cg  DefaultUIStyle.css  Resources.qrc  UtilRoutines.cg  arrow.tif  basicTex.cg  depthtransfer.cg  fonts.fontdef  hijackVP.cg
res/ui/: ChooseSeries.ui  Draw2DView.ui  LightProp.ui  ObjProp.ui  (+10 more)
tests/: .coveragerc  README.md  TestUtils.py  Testing.py  axestest.py  baseelementstest.py  basisgentest.py  imagetest.py  materialtest.py  mathtest.py  meshextadjtest.py  meshsceneobjecttest.py  quadtest.py  run_coverage.sh  runpytests.py  rununittests.py  shadertest.py  sphere_cliptest.py  spherescripttest.py  spheretest.py  texturetest.py  trimeshgentest.py  uitest.py  volumetest.py
tutorial/: tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py  tutorial5.py  tutorial5a.py  tutorial6.py  tutorial7.py
(+276 files in other folders)
